@@ -27,3 +27,16 @@ C <- mxMatrix('Full', 2, 2, labels = c('B[2,2]', 'B[2,1]', 'B[1,2]', 'B[1,1]'), 
 model <- mxModel('model', A, B, C)
 model <- mxRun(model)
 omxCheckIdentical(mxEval(C, model), matrix(rev(c(1,2,3,4)) * 2, 2, 2, byrow = TRUE))
+nv <- 2
+A <- mxAlgebra(nv, name = 'A')
+B <- mxAlgebra(2, name = 'B')
+model1 <- mxModel('model1', A)
+model2 <- mxModel('model2', B)
+model3 <- mxModel('model3', A, B)
+model1 <- mxRun(model1)
+model2 <- mxRun(model2)
+model3 <- mxRun(model3)
+omxCheckIdentical(mxEval(A, model1), as.matrix(nv))
+omxCheckIdentical(mxEval(B, model2), as.matrix(2))
+omxCheckIdentical(mxEval(A, model3), as.matrix(nv))
+omxCheckIdentical(mxEval(B, model3), as.matrix(2))
