@@ -19,6 +19,7 @@ trunk
 * added 'numObs', 'numStats' arguments to mxAlgebraObjective()
 * added 'numObs', 'numStats' arguments to summary()
 * changed mxCompare() signature to mxCompare(base, comparison, digits = 3)
+* fixed aliasing bug in mxAlgebra() with external variables and constant values
 
 Release 0.2.10-1172 (Mar 14, 2010)
 ==================================
